--- a/doctorFrontend/src/index.css
+++ b/doctorFrontend/src/index.css
@@ -4,7 +4,9 @@
 
 @layer base {
   html {
-    font-family: 'Outfit', system-ui, sans-serif;
+    font-family: 'Inter', system-ui, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 }
 
