--- a/patientFrontend/src/index.css
+++ b/patientFrontend/src/index.css
@@ -7,7 +7,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: #1a1a1a;
   background-color: #ffffff;
 
@@ -22,4 +21,5 @@ body {
   padding: 0;
   width: 100%;
   min-height: 100vh;
+  background-color: #ffffff;
 }
